resume, research: more research topics

--- a/resumes/cv_12.tex
+++ b/resumes/cv_12.tex
@@ -24,7 +24,7 @@
 \begin{document}
 
 %----------------------------------------------------------------------------------------
-%	TITLE SECTION
+%    TITLE SECTION
 %----------------------------------------------------------------------------------------
 
 \lastupdated % Print the Last Updated text at the top right
@@ -37,7 +37,7 @@
 }
 
 %----------------------------------------------------------------------------------------
-%	LEFT COLUMN
+%    LEFT COLUMN
 %----------------------------------------------------------------------------------------
 
 \begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
@@ -137,7 +137,7 @@ AS3 \textbullet{} iOS \textbullet{} Android \textbullet{} MySQL
 \hfill
 %
 %----------------------------------------------------------------------------------------
-%	RIGHT COLUMN
+%    RIGHT COLUMN
 %----------------------------------------------------------------------------------------
 %
 \begin{minipage}[t]{0.66\textwidth} % The right column takes up 66% of the text width of the page
@@ -148,9 +148,29 @@ AS3 \textbullet{} iOS \textbullet{} Android \textbullet{} MySQL
 
 \section{Experience}
 
+\runsubsection{Personalization Engine for Financial Products}
+\descript{| Director of Engineering (CTO)}
+
+\location{Oct 2015 - Dec 2017 | Brooklyn, NY}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Semantic extraction using custom model tree (CoreNLP proved too heavy).
+\item NB classifier for extraction outliers. Tag for reinforcement, or auto-publishing
+\item NB classifier to categorize product description sentences into semantic groups for personalized / focused UI displays. 
+\item Elasticsearch linked-data results (HAML) and grouped search results. (neo4j)
+\item Data cleaning and processing of product ETL pipelines.
+\item ML admin panels integrated seamlessly into an editorial admin (CMS).
+\item Segmentation by cluster analysis (SQL, offline).  Stan test of stream modeling.
+\item Data ontology formed via semiotics of consumer financial banking.
+
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
 \runsubsection{PageUI}
 \descript{| Co-Founder, CTO}
-
 \location{Jun 2008 - Mar 2009 | Tempe, AZ}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
@@ -185,12 +205,73 @@ AS3 \textbullet{} iOS \textbullet{} Android \textbullet{} MySQL
 
 %------------------------------------------------
 
+\runsubsection{Cloud App Platform}
+\descript{| R\&D Engineering}
+\location{Jun 2013 - Oct 2015 | New York, NY}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Designed lambda-as-a-service pattern for data-platform strategy.
+\item Won trust with executive backers, started working group.
+\item Developed patent strategy with chief patent counsel.
+\item All of the above at leading Pharma and Financial Data corp.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+
+%------------------------------------------------
+
+\runsubsection{Bardcruft}
+\descript{| Situated Media programme}
+
+\location{2004, 2017 | Tempe; NYC}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+Design and built a tool for finding similarities in narratives (‘Hero of 100 Faces’)
+\begin{tightitemize}
+\item Use of ConceptNet, mysql (now RDF4J and SPARQL)
+\item Translation of stories into state trajectories and relationship triples
+\item Visualization of semantic graph by-concept (scopes/filters)
+\item Text annotation GUI for creating new triples.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+
+
+%----------------------------------------------------------------------------------------
+
+\end{minipage} % The end of the right column
+
+%----------------------------------------------------------------------------------------
+%    SECOND PAGE (EXAMPLE)
+%----------------------------------------------------------------------------------------
+
+\newpage % Start a new page
+
+%\begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
+
+%\section{Example Section}
+
+%\end{minipage} % The end of the left column
+\hfill
+\begin{minipage}[t]{1\textwidth} % The right column takes up 66% of the text width of the page
+
+%------------------------------------------------
+% Research
+%------------------------------------------------
+
+\section{Research}
+
+%------------------------------------------------
+
+
 \runsubsection{Convergance study of CFD + Experimental Data}
 \descript{| ASU}
 
 \location{June 2006 - Oct 2009 | Tempe, AZ}
+Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
+
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
-Multiple studies of a non-turbulent vortex hydrodynamic equilibrium. 
 \begin{tightitemize}
 \item Algorithmic model development in python and CAD machining. 
 \item CFD modeling with ANSYS multiphysics. 
@@ -256,10 +337,10 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 \section{Awards} 
 
 \begin{tabular}{rll}
-2014	 & top 52/2500 & KPCB Engineering Fellow\\
-2014	 & 2\textsuperscript{nd} most points & Google Code Jam, Qualification Round\\
-2014	 & 1\textsuperscript{st}/50 & Microsoft Coding Competition, Cornell\\
-2013	 & National & Jump Trading Challenge Finalist\\
+2014     & top 52/2500 & KPCB Engineering Fellow\\
+2014     & 2\textsuperscript{nd} most points & Google Code Jam, Qualification Round\\
+2014     & 1\textsuperscript{st}/50 & Microsoft Coding Competition, Cornell\\
+2013     & National & Jump Trading Challenge Finalist\\
 2013 & 7\textsuperscript{th}/120 & CS 3410 Cache Race Bot Tournament \\
 2012 & 2\textsuperscript{nd}/150 & CS 3110 Biannual Intra-Class Bot Tournament \\
 2011 & National & Indian National Mathematics Olympiad (INMO) Finalist \\
@@ -283,42 +364,14 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 
 \sectionspace % Some whitespace after the section
 
-%----------------------------------------------------------------------------------------
-
-\end{minipage} % The end of the right column
-
-%----------------------------------------------------------------------------------------
-%	SECOND PAGE (EXAMPLE)
-%----------------------------------------------------------------------------------------
-
-\newpage % Start a new page
-
-%\begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
-
-%\section{Example Section}
-
-%\end{minipage} % The end of the left column
-\hfill
-\begin{minipage}[t]{1\textwidth} % The right column takes up 66% of the text width of the page
 
 %------------------------------------------------
-% Research
-%------------------------------------------------
 
-\section{Research}
 
-\runsubsection{Cornell Robot Learning Lab}
-\descript{| Head Undergrad Research}
-
-\location{Jan 2014 – Present | Ithaca, NY}
-Worked with \textbf{\href{http://www.cs.cornell.edu/~ashesh/}{Ashesh Jain}} and \textbf{\href{http://www.cs.cornell.edu/~asaxena/}{Prof Ashutosh Saxena}} to create \textbf{PlanIt}, a tool which learns from large scale user preference feedback to plan robot trajectories in human environments. Publication submitted.
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
 
 \end{minipage} % The end of the right column
 
 %----------------------------------------------------------------------------------------
 
 \end{document}
+
