resume: added awards, pubs, societies

--- a/resumes/cv_12.tex
+++ b/resumes/cv_12.tex
@@ -75,63 +75,73 @@ AR, HCI, Simulation, 3D/CNC, water.
 
 \section{Links} 
 
-Github:// \href{https://github.com/deedydas}{\bf deedydas} \\
-LinkedIn:// \href{https://www.linkedin.com/in/debarghyadas}{\bf debarghyadas} \\
-YouTube:// \href{https://www.youtube.com/user/DeedyDash007}{\bf DeedyDash007} \\
-Twitter:// \href{https://twitter.com/debarghya_das}{\bf @debarghya\_das} \\
-Quora:// \href{https://www.quora.com/Debarghya-Das}{\bf Debarghya-Das}
+Github:// \href{https://github.com/NewAlexandria}{\bf newalexandria} \\
+LinkedIn:// \href{https://linkedin.com/in/newalexandria}{\bf newalexandria} \\
+StackOverflow:// \href{https://stackoverflow.com/story/newalexandria}{\bf newalexandria} \\
+Twitter:// \href{https://twitter.com/invis_insight}{\bf @invis\_insight} \\
+StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=accounts}{\bf newalexandria}
 
 \sectionspace % Some whitespace after the section
 
 %------------------------------------------------
-% Coursework
+% Awards
 %------------------------------------------------
 
-\section{Coursework}
+\section{Awards} 
 
-\subsection{Graduate}
-
-Advanced Machine Learning \\
-Open Source Software Engineering \\
-Advanced Interactive Graphics \\
-Compilers + Practicum \\
-Cloud Computing
+\begin{tabular}{rll}
+2008 & NASA/Ames Arts \& Engineering\\
+2007 & Grant for CFD analysis\\
+2006 & Seed capital raised: Edson\\
+2006 & Art \& Engineer Talent Award\\
+2005 & Various lecture travel grants\\
+2004 & PEAR lab grant\\
+2003 & Contrib: Ag. grants for \$2MM\\
+1999 & Building Virtual Worlds grant\\
+1998 & Sonoluminescence lab grant\\
+\end{tabular}
 
 \sectionspace % Some whitespace after the section
 
 %------------------------------------------------
+% Societies
+%------------------------------------------------
 
-\subsection{Undergraduate}
+\section{Societies} 
 
-Information Retrieval \\
-Operating Systems \\
-Artificial Intelligence + Practicum \\
-Functional Programming \\
-Computer Graphics + Practicum \\
-{\footnotesize \textit{\textbf{(Research Asst. \& Teaching Asst) }}} \\
-Unix Tools and Scripting
+\begin{tabular}{rll}
+2015-2019 & Papers We Love\\
+2009-2019 & ICRL\\
+2006 & SkySong Accelerator\\
+2004-2009 & PEAR Lab\\
+2005-2007 & AME assn. President\\
+1996-1999 & CMU Student Senator\\
+1998-1999 & Stage 3 Lab intern\\
+\end{tabular}
 
 \sectionspace % Some whitespace after the section
 
 %------------------------------------------------
-% Skills
+% Publications
 %------------------------------------------------
 
-\section{Skills}
+\section{Publications} 
 
-\subsection{Programming}
-
-\location{Over 5000 lines:}
-Java \textbullet{} Shell \textbullet{} JavaScript \textbullet{} Matlab \\
-OCaml \textbullet{} Python \textbullet{} Rails \textbullet{} \LaTeX\ \\ 
-\location{Over 1000 lines:}
-C \textbullet{} C++ \textbullet{} CSS \textbullet{} PHP \textbullet{} Assembly \\
-\location{Familiar:}
-AS3 \textbullet{} iOS \textbullet{} Android \textbullet{} MySQL
+\begin{tabular}{rll}
+2018 & RPA Summit\\
+2017 & AI World\\
+2009 & Filters \& Reflections anthology\\
+2007 & AZ State STEM curriculum WG\\
+2006 & World Water Forum, Mexico\\
+2007 & Technoetic Arts Journal\\
+2004 & Qi and Complexity, Beijing\\
+2001 & Phytoremediation, Dept. Energy\\
+\end{tabular}
 
 \sectionspace % Some whitespace after the section
 
-%----------------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
 
 \end{minipage} % The end of the left column
 \hfill
@@ -172,7 +182,6 @@ AS3 \textbullet{} iOS \textbullet{} Android \textbullet{} MySQL
 \runsubsection{PageUI}
 \descript{| Co-Founder, CTO}
 \location{Jun 2008 - Mar 2009 | Tempe, AZ}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item Developed early reactive-JS codebase, and stacked our app/biz on it. 
 \item Mozilla went on to support a labs project that was nearly identical, with major adoption. 
@@ -208,7 +217,7 @@ AS3 \textbullet{} iOS \textbullet{} Android \textbullet{} MySQL
 \runsubsection{Cloud App Platform}
 \descript{| R\&D Engineering}
 \location{Jun 2013 - Oct 2015 | New York, NY}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
+
 \begin{tightitemize}
 \item Designed lambda-as-a-service pattern for data-platform strategy.
 \item Won trust with executive backers, started working group.
@@ -323,44 +332,10 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 \begin{tightitemize}
 \item Designed codes for conversion of analytical protein data into physical model.
 \item Worked with 3D data in PDB and OBJ formats from the wwPDB database.
-\item Designed and programmed of 3D computer graphic algorithms in numpy. Averaging of multiple femtosecond datasets from HPCI/MPI simulations.
+\item Designed and programmed of 3D computer graphic algorithms in numpy.
+\item Averaging series of femtosecond datasets from HPCI/MPI simulations.
 \item Solid model files for printing via FDM rapid prototyping on Stratasys hardware.
 \end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-
-
-%------------------------------------------------
-% Awards
-%------------------------------------------------
-
-\section{Awards} 
-
-\begin{tabular}{rll}
-2014     & top 52/2500 & KPCB Engineering Fellow\\
-2014     & 2\textsuperscript{nd} most points & Google Code Jam, Qualification Round\\
-2014     & 1\textsuperscript{st}/50 & Microsoft Coding Competition, Cornell\\
-2013     & National & Jump Trading Challenge Finalist\\
-2013 & 7\textsuperscript{th}/120 & CS 3410 Cache Race Bot Tournament \\
-2012 & 2\textsuperscript{nd}/150 & CS 3110 Biannual Intra-Class Bot Tournament \\
-2011 & National & Indian National Mathematics Olympiad (INMO) Finalist \\
-2010 & National & Comp. Soc. of India's National Programming Contest\\
-\end{tabular}
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-% Societies
-%------------------------------------------------
-
-\section{Societies} 
-
-\begin{tabular}{rll}
-2014 & top 12\%ile & Tau Beta Pi Engineering Honor Society\\
-2014 & National & The Global Leadership and Education Forum (tGELF)\\
-2012 & National & Golden Key International Honor Society\\
-2012 & National & National Society of Collegiate Scholars\\
-\end{tabular}
 
 \sectionspace % Some whitespace after the section
 
@@ -374,4 +349,3 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 %----------------------------------------------------------------------------------------
 
 \end{document}
-
