--- a/resumes/cv_12.tex
+++ b/resumes/cv_12.tex
@@ -27,7 +27,7 @@
 %    TITLE SECTION
 %----------------------------------------------------------------------------------------
 
-\lastupdated % Print the Last Updated text at the top right
+% \lastupdated % Print the Last Updated text at the top right
 
 \namesection{Zachary}{Jones}{ % Your name
 \urlstyle{same}\href{mailto:zak@newalexandria.org}{zak@newalexandria.org} ||  \href{https://www.twitter.com/invis_insight}{@invis\_insight} ||   \href{https://www.linkedin.com/in/newalexandria}{LinkedIn}/\href{https://www.github.com/NewAlexandria}{Github}/\href{https://www.stackoverflow/story/newalexandria}{SE}: \href{https://www.linkedin.com/in/newalexandria}{newalexandria}
@@ -55,8 +55,7 @@
 \descript{BFA; Electronic and Hypermedia}
 \descript{HCI (Interface Design, Usability)}
 \location{Pittsburgh, PA. May 2000}
-VR/AR work, engineering arts,
-including acclaimed Stage 3 lab.
+VR/AR work, engineering arts.
 
 \sectionspace % Some whitespace after the section
 
@@ -90,12 +89,12 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 \section{Awards} 
 
 \begin{tabular}{rll}
+2019 & \textbf{M\&A exit:} Personalization\\
 2008 & NASA/Ames Arts \& Engineering\\
 2007 & Grant for CFD analysis\\
 2006 & Seed capital raised: Edson\\
 2006 & Art \& Engineer Talent Award\\
 2005 & Various lecture travel grants\\
-2004 & PEAR lab grant\\
 2003 & Contrib: Ag. grants for \$2MM\\
 1999 & Building Virtual Worlds grant\\
 1998 & Sonoluminescence lab grant\\
@@ -111,12 +110,11 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 
 \begin{tabular}{rll}
 2015-2019 & Papers We Love\\
-2009-2019 & ICRL\\
+2004-2019 & PEAR Lab \& ICRL\\
 2006 & SkySong Accelerator\\
-2004-2009 & PEAR Lab\\
 2005-2007 & AME assn. President\\
 1996-1999 & CMU Student Senator\\
-1998-1999 & Stage 3 Lab intern\\
+1998-1999 & Stage 3 Lab\\
 \end{tabular}
 
 \sectionspace % Some whitespace after the section
@@ -130,9 +128,11 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 \begin{tabular}{rll}
 2018 & RPA Summit\\
 2017 & AI World\\
+2010 & \textbf{Patent:} Crystallization Reactor\\
 2009 & Filters \& Reflections anthology\\
+2008 & \textbf{Patent:} Vortex water\\
 2007 & AZ State STEM curriculum WG\\
-2006 & World Water Forum, Mexico\\
+2007 & \textbf{Patent:} HRS Semantic vectors\\
 2007 & Technoetic Arts Journal\\
 2004 & Qi and Complexity, Beijing\\
 2001 & Phytoremediation, Dept. Energy\\
@@ -158,11 +158,29 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 
 \section{Experience}
 
+%------------------------------------------------
+
+\runsubsection{<conversational templating app>}
+\descript{| Lead}
+
+\location{Mar 2017 | New York, NY}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Research into semantic features of job-seeker emails \& time-series.
+\item Hypermedia API spec in siren format, via swagger. PWA webapp in React
+\item Clickable prototype. Medium-fidelity screens based on data model. UX flow.
+\item Dual-appstore deploy to iOS and Android, via React Native.
+\item Develop evented system. Incremental data and extraction jobs with amqp.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
 \runsubsection{Personalization Engine for Financial Products}
 \descript{| Director of Engineering (CTO)}
-
 \location{Oct 2015 - Dec 2017 | Brooklyn, NY}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
+
 \begin{tightitemize}
 \item Semantic extraction using custom model tree (CoreNLP proved too heavy).
 \item NB classifier for extraction outliers. Tag for reinforcement, or auto-publishing
@@ -184,7 +202,7 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 \location{Jun 2008 - Mar 2009 | Tempe, AZ}
 \begin{tightitemize}
 \item Developed early reactive-JS codebase, and stacked our app/biz on it. 
-\item Mozilla went on to support a labs project that was nearly identical, with major adoption. 
+\item Mozilla later supported a nearly identical labs project, with major adoption.
 \item Usabilty research showed preference over X-marks, which was mainstream.
 \end{tightitemize}
 
@@ -232,9 +250,8 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 
 \runsubsection{Bardcruft}
 \descript{| Situated Media programme}
-
 \location{2004, 2017 | Tempe; NYC}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
+
 Design and built a tool for finding similarities in narratives (‘Hero of 100 Faces’)
 \begin{tightitemize}
 \item Use of ConceptNet, mysql (now RDF4J and SPARQL)
@@ -278,6 +295,7 @@ Design and built a tool for finding similarities in narratives (‘Hero of 100 F
 \descript{| ASU}
 
 \location{June 2006 - Oct 2009 | Tempe, AZ}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
 Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
@@ -312,10 +330,9 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 \descript{| ASU, Sponsored Research}
 
 \location{Sept 2005 – May 2006 | Tempe, AZ}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item Formulated notation conventions for data navigational affordances.
-\item Aimed at creating consistent semantic meaning in 2D and 3D spaces through quantizing hypermedia datasets using mereotopological models.
+\item Aimed at creating consistent semantic meaning in 2D and 3D spaces through quantizing hypermedia datasets using mereological models.
 \item Research into cognitive continuum across haptic and perceptual domains.  
 \item Live test subject research, HCI methods.  Patentable, never filed.
 \end{tightitemize}
