--- a/resumes/cv_12.tex
+++ b/resumes/cv_12.tex
@@ -302,7 +302,7 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 \begin{tightitemize}
 \item Algorithmic model development in python and CAD machining. 
 \item CFD modeling with ANSYS multiphysics. 
-\item Quantified comparison k-$\epsilon$ tubulence, reynolds stress, and laminar simulations.
+\item Quantified comparison k-$\epsilon$ turbulence, reynolds stress, and laminar simulations.
 \item Analysis of free-surface experimental model, and simulation data.
 \item Platform patent strategy.  Grants. Seed capital raised. Team of world authorities.
 \end{tightitemize}
@@ -347,8 +347,8 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 
 \location{Biophoton and QED research visualization | Tempe, AZ}
 \begin{tightitemize}
-\item Designed codes for conversion of analytical protein data into physical model.
-\item Worked with 3D data in PDB and OBJ formats from the wwPDB database.
+\item Designed codes for conversion of analytic protein data into physical model.
+\item Worked with 3D data in PDB and OBJ formats from the \textit{wwPDB} database.
 \item Designed and programmed of 3D computer graphic algorithms in numpy.
 \item Averaging series of femtosecond datasets from HPCI/MPI simulations.
 \item Solid model files for printing via FDM rapid prototyping on Stratasys hardware.
