resume: add living crystal research

--- a/resumes/cv_zcj_research.tex
+++ b/resumes/cv_zcj_research.tex
@@ -163,7 +163,7 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 \runsubsection{<conversational templating app>}
 \descript{| Lead}
 
-\location{Mar 2017 | New York, NY}
+\location{Mar 2017 - Feb 2018 | New York, NY}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item Research into semantic features of job-seeker emails \& time-series.
@@ -311,6 +311,24 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 
 %------------------------------------------------
 
+\runsubsection{Biophoton and QED research visualization.}
+\descript{| ASU }
+
+\location{Aug 2008 | Tempe, AZ}
+\begin{tightitemize}
+\item Designed codes for conversion of analytic protein data into physical model.
+\item Worked with 3D data in PDB and OBJ formats from the \textit{wwPDB} database.
+\item Designed and programmed of 3D computer graphic algorithms in numpy.
+\item Averaging series of femtosecond datasets from HPCI/MPI simulations.
+\item Solid model files for printing via FDM rapid prototyping on Stratasys hardware.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+
+%------------------------------------------------
+
+
 \runsubsection{HRS}
 \descript{| Co-Founder, CTO}
 
@@ -342,16 +360,15 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 
 %------------------------------------------------
 
-\runsubsection{Biophoton and QED research visualization.}
-\descript{| ASU }
+\runsubsection{Weather-sensitive Crystal Reactor}
+\descript{| ASU, New Alexandria}
 
-\location{Biophoton and QED research visualization | Tempe, AZ}
+\location{Aug 2008 | Tempe, AZ}
 \begin{tightitemize}
-\item Designed codes for conversion of analytic protein data into physical model.
-\item Worked with 3D data in PDB and OBJ formats from the \textit{wwPDB} database.
-\item Designed and programmed of 3D computer graphic algorithms in numpy.
-\item Averaging series of femtosecond datasets from HPCI/MPI simulations.
-\item Solid model files for printing via FDM rapid prototyping on Stratasys hardware.
+\item Lab resources grant. Dry and wet lab methods. ICPMS media prep.
+\item Design of experiments for multivariate analyses.
+\item Developed patent outline / structure.
+\item Productionalization / reduce to practice.  
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
