README WIP invite

--- a/resumes/cv_zcj_research.tex
+++ b/resumes/cv_zcj_research.tex
@@ -228,7 +228,7 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 % Research
 %------------------------------------------------
 
-\section{Research}
+\section{Research \& Projects}
 
 %------------------------------------------------
 
@@ -286,7 +286,7 @@ Design and built a tool for finding similarities in narratives (‘Hero of 100 F
 % Research
 %------------------------------------------------
 
-\section{Research}
+\section{Research \& Projects}
 
 %------------------------------------------------
 
