resume: tech updated

--- a/resumes/cv_zcj_tech.tex
+++ b/resumes/cv_zcj_tech.tex
@@ -20,7 +20,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[letterpaper]{deedy-resume} % Use US Letter paper, change to a4paper for A4
-
 \begin{document}
 
 %----------------------------------------------------------------------------------------
@@ -30,10 +29,9 @@
 % \lastupdated % Print the Last Updated text at the top right
 
 \namesection{Zachary}{Jones}{ % Your name
-\urlstyle{same}\href{mailto:zak@newalexandria.org}{zak@newalexandria.org} ||  \href{https://www.twitter.com/invis_insight}{@invis\_insight} ||   \href{https://www.linkedin.com/in/newalexandria}{LinkedIn}/\href{https://www.github.com/NewAlexandria}{Github}/\href{https://www.stackoverflow/story/newalexandria}{SE}: \href{https://www.linkedin.com/in/newalexandria}{newalexandria}
- \\ % Your website, LinkedIn profile or other web address
 
-\href{tel:+1.412.628.0954}{412.628.0954} mobile  ||  220 E. 63rd Street, New York, NY 10065
+% Your website, LinkedIn profile or other web address
+\href{mailto:zak@newalexandria.org}{zak@newalexandria.org}  || \href{tel:+1.412.628.0954}{412.628.0954} mobile  ||  220 E. 63rd Street, New York, NY 10065
 }
 
 %----------------------------------------------------------------------------------------
@@ -82,66 +80,50 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 
 \sectionspace % Some whitespace after the section
 
-%------------------------------------------------
-% Awards
-%------------------------------------------------
-
-\section{Awards}
-
-\begin{tabular}{rll}
-2019 & \textbf{M\&A exit:} Personalization\\
-2008 & NASA/Ames Arts \& Engineering\\
-2007 & Grant for CFD analysis\\
-2006 & Seed capital raised: Edson\\
-2006 & Art \& Engineer Talent Award\\
-2005 & Various lecture travel grants\\
-2003 & Contrib: Ag. grants for \$2MM\\
-1999 & Building Virtual Worlds grant\\
-1998 & Sonoluminescence lab grant\\
-\end{tabular}
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-% Societies
-%------------------------------------------------
-
-\section{Societies}
-
-\begin{tabular}{rll}
-2015-2019 & Papers We Love\\
-2004-2019 & PEAR Lab \& ICRL\\
-2006 & SkySong Accelerator\\
-2005-2007 & AME assn. President\\
-1996-1999 & CMU Student Senator\\
-1998-1999 & Stage 3 Lab\\
-\end{tabular}
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-% Publications
-%------------------------------------------------
-
-\section{Publications}
-
-\begin{tabular}{rll}
-2018 & RPA Summit\\
-2017 & AI World\\
-2010 & \textbf{Patent:} Crystallization Reactor\\
-2009 & Filters \& Reflections anthology\\
-2008 & \textbf{Patent:} Vortex water\\
-2007 & AZ State STEM curriculum WG\\
-2007 & \textbf{Patent:} HRS Semantic vectors\\
-2007 & Technoetic Arts Journal\\
-2004 & Qi and Complexity, Beijing\\
-2001 & Phytoremediation, Dept. Energy\\
-\end{tabular}
-
-\sectionspace % Some whitespace after the section
-
-
 %------------------------------------------------------------------------------
+
+\includegraphics[width=2.3in]{github-work}
+
+\section{}
+\sectionspace % Some whitespace after the section
+
+\section{}
+\sectionspace % Some whitespace after the section
+
+\section{}
+\sectionspace % Some whitespace after the section
+
+\section{}
+\sectionspace % Some whitespace after the section
+
+\section{}
+\sectionspace % Some whitespace after the section
+
+\section{}
+\sectionspace % Some whitespace after the section
+
+\section{}
+\sectionspace % Some whitespace after the section
+
+\section{}
+\sectionspace % Some whitespace after the section
+
+\section{}
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+% Patent Work
+%------------------------------------------------
+
+\section{Patent Work}
+
+\begin{tabular}{rll}
+2014 & Business App Cloud\\
+2010 & Crystallization Reactor\\
+2008 & Vortex water\\
+2007 & HRS Semantic vectors\\
+\end{tabular}
+
 
 \end{minipage} % The end of the left column
 \hfill
@@ -262,13 +244,66 @@ Drag'n'drop UI/UX for bookmark management and workflow
 
 \newpage % Start a new page
 
-%\begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
+\begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
 
-%\section{Example Section}
+%------------------------------------------------
+% Awards
+%------------------------------------------------
 
-%\end{minipage} % The end of the left column
+\section{Awards}
+
+\begin{tabular}{rll}
+2019 & \textbf{M\&A exit:} Personalization\\
+2008 & NASA/Ames Arts \& Engineering\\
+2007 & Grant for CFD analysis\\
+2006 & Seed capital raised: Edson\\
+2006 & Art \& Engineer Talent Award\\
+2005 & Various lecture travel grants\\
+2003 & Contrib: Ag. grants for \$2MM\\
+1999 & Building Virtual Worlds grant\\
+1998 & Sonoluminescence lab grant\\
+\end{tabular}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+% Societies
+%------------------------------------------------
+
+\section{Societies}
+
+\begin{tabular}{rll}
+2015-2019 & Papers We Love\\
+2004-2019 & PEAR Lab \& ICRL\\
+2006 & SkySong Accelerator\\
+2005-2007 & AME assn. President\\
+1996-1999 & CMU Student Senator\\
+1998-1999 & Stage 3 Lab\\
+\end{tabular}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+% Publications
+%------------------------------------------------
+
+\section{Publications}
+
+\begin{tabular}{rll}
+2018 & RPA Summit\\
+2017 & AI World\\
+2009 & Filters \& Reflections anthology\\
+2007 & AZ State STEM curriculum WG\\
+2007 & Technoetic Arts Journal\\
+2004 & Qi and Complexity, Beijing\\
+2001 & Phytoremediation, Dept. Energy\\
+\end{tabular}
+
+\sectionspace % Some whitespace after the section
+
+\end{minipage} % The end of the left column
 \hfill
-\begin{minipage}[t]{1\textwidth} % The right column takes up 66% of the text width of the page
+\begin{minipage}[t]{0.66\textwidth} % The right column takes up 66% of the text width of the page
 
 %------------------------------------------------
 % Research
