--- a/resumes/deedy-resume.cls
+++ b/resumes/deedy-resume.cls
@@ -11,6 +11,8 @@
 \usepackage[hmargin=1.25cm, vmargin=0.75cm]{geometry} % Specifies horizontal and vertical page margins
 \usepackage{hyperref} % Required for links
 
+\usepackage{graphicx}
+
 %----------------------------------------------------------------------------------------
 %	COLORS
 %----------------------------------------------------------------------------------------
