data-sci: extras

--- a/resumes/cv_zcj_research.tex
+++ b/resumes/cv_zcj_research.tex
@@ -19,7 +19,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[letterpaper]{deedy-resume} % Use US Letter paper, change to a4paper for A4 
+\documentclass[letterpaper]{deedy-resume} % Use US Letter paper, change to a4paper for A4
 
 \begin{document}
 
@@ -33,7 +33,7 @@
 \urlstyle{same}\href{mailto:zak@newalexandria.org}{zak@newalexandria.org} ||  \href{https://www.twitter.com/invis_insight}{@invis\_insight} ||   \href{https://www.linkedin.com/in/newalexandria}{LinkedIn}/\href{https://www.github.com/NewAlexandria}{Github}/\href{https://www.stackoverflow/story/newalexandria}{SE}: \href{https://www.linkedin.com/in/newalexandria}{newalexandria}
  \\ % Your website, LinkedIn profile or other web address
 
-\href{tel:+1.412.628.0954}{412.628.0954} mobile  ||  220 E. 63rd Street, New York, NY 10065 
+\href{tel:+1.412.628.0954}{412.628.0954} mobile  ||  220 E. 63rd Street, New York, NY 10065
 }
 
 %----------------------------------------------------------------------------------------
@@ -46,7 +46,7 @@
 % Education
 %------------------------------------------------
 
-\section{Education} 
+\section{Education}
 
 %------------------------------------------------
 
@@ -72,7 +72,7 @@ AR, HCI, Simulation, 3D/CNC, water.
 % Links
 %------------------------------------------------
 
-\section{Links} 
+\section{Links}
 
 Github:// \href{https://github.com/NewAlexandria}{\bf newalexandria} \\
 LinkedIn:// \href{https://linkedin.com/in/newalexandria}{\bf newalexandria} \\
@@ -86,7 +86,7 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 % Awards
 %------------------------------------------------
 
-\section{Awards} 
+\section{Awards}
 
 \begin{tabular}{rll}
 2019 & \textbf{M\&A exit:} Personalization\\
@@ -106,7 +106,7 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 % Societies
 %------------------------------------------------
 
-\section{Societies} 
+\section{Societies}
 
 \begin{tabular}{rll}
 2015-2019 & Papers We Love\\
@@ -123,7 +123,7 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 % Publications
 %------------------------------------------------
 
-\section{Publications} 
+\section{Publications}
 
 \begin{tabular}{rll}
 2018 & RPA Summit\\
@@ -177,14 +177,31 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 
 %------------------------------------------------
 
-\runsubsection{Personalization Engine for Financial Products}
+\runsubsection{Investopedia}
+\descript{| Director of Engineering}
+\location{Dec 2017 - Aug 2018 | New York, NY}
+\begin{tightitemize}
+\item Frontend widget atomic components are stateless-cachable on vert.x + React.
+\item microservice middleware in vert.x (java), Kotlin of personalization. The
+\item Semantic content admin CMS with wagtail / python.
+\item Spec’d CMS with stockholder. Built team; focused biz unit with GM.
+\item Developed new product strategy with exec team.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
+\runsubsection{MyBankTracker}
 \descript{| Director of Engineering (CTO)}
 \location{Oct 2015 - Dec 2017 | Brooklyn, NY}
 
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+Semantic UI on top of Personalization Engine for Financial Products
 \begin{tightitemize}
 \item Semantic extraction using custom model tree (CoreNLP proved too heavy).
 \item NB classifier for extraction outliers. Tag for reinforcement, or auto-publishing
-\item NB classifier to categorize product description sentences into semantic groups for personalized / focused UI displays. 
+\item NB classifier to categorize product description sentences into semantic groups for personalized / focused UI displays.
 \item Elasticsearch linked-data results (HAML) and grouped search results. (neo4j)
 \item Data cleaning and processing of product ETL pipelines.
 \item ML admin panels integrated seamlessly into an editorial admin (CMS).
@@ -197,73 +214,37 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 
 %------------------------------------------------
 
+\runsubsection{Medidata Solutions}
+\descript{| Manager, Frontend Engineering}
+\location{Aug 2014 - Oct 2015 | New York, NY}
+
+Frontend and middle applications for Clinical Trials design and analysis
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Angular js and MVC Architecture.  Angular core component engineering.
+\item Set process standards, 150-200\% productivity gains. 
+\item Devised new behavioral analytic measures, driving product design.
+\item Cucumber BDD best practices, from 3-amigos feature to agile standards.
+\item Designed and executed an 8-layer QA automatiomn. Niche tools and strategies.
+\item NYC Office lead for Programming Foundations Guild, Frontend Guild. 
+\item Hosted conferences, external speakers, etc. 
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+
+%------------------------------------------------
+
 \runsubsection{PageUI}
 \descript{| Co-Founder, CTO}
 \location{Jun 2008 - Mar 2009 | Tempe, AZ}
 \begin{tightitemize}
-\item Developed early reactive-JS codebase, and stacked our app/biz on it. 
+\item Developed early reactive-JS codebase, and stacked our app/biz on it.
 \item Mozilla later supported a nearly identical labs project, with major adoption.
 \item Usabilty research showed preference over X-marks, which was mainstream.
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-
-\runsubsection{HRS}
-\descript{| Co-Founder, CTO}
-
-\location{Jan 2006 - Oct 2007 | Vancouver, BC}
-\begin{tightitemize}
-\item Designed search and matching algorithms for social search.
-\item Semantics modeled as state vectors for protocol engineering.  Pre-blockchain.
-\item Performed prior-art research and wrote a draft patent. IP law firm counsel.
-\item Developed a collaboration-ware app for course software, distance education.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-
-
-%------------------------------------------------
-% Research
-%------------------------------------------------
-
-\section{Research \& Projects}
-
-%------------------------------------------------
-
-\runsubsection{Cloud App Platform}
-\descript{| R\&D Engineering}
-\location{Jun 2013 - Oct 2015 | New York, NY}
-
-\begin{tightitemize}
-\item Designed lambda-as-a-service pattern for data-platform strategy.
-\item Won trust with executive backers, started working group.
-\item Developed patent strategy with chief patent counsel.
-\item All of the above at leading Pharma and Financial Data corp.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-
-
-%------------------------------------------------
-
-\runsubsection{Bardcruft}
-\descript{| Situated Media programme}
-\location{2004, 2017 | Tempe; NYC}
-
-Design and built a tool for finding similarities in narratives (‘Hero of 100 Faces’)
-\begin{tightitemize}
-\item Use of ConceptNet, mysql (now RDF4J and SPARQL)
-\item Translation of stories into state trajectories and relationship triples
-\item Visualization of semantic graph by-concept (scopes/filters)
-\item Text annotation GUI for creating new triples.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-
-
-
 %----------------------------------------------------------------------------------------
 
 \end{minipage} % The end of the right column
@@ -290,6 +271,56 @@ Design and built a tool for finding similarities in narratives (‘Hero of 100 F
 
 %------------------------------------------------
 
+\runsubsection{HRS}
+\descript{| Co-Founder, CTO}
+
+\location{Jan 2006 - Oct 2007 | Vancouver, BC}
+\begin{tightitemize}
+\item Designed search and matching algorithms for social search.
+\item Semantics modeled as state vectors for protocol engineering.  Pre-blockchain.
+\item Performed prior-art research and wrote a draft patent. IP law firm counsel.
+\item Developed a collaboration-ware app for course software, distance education.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+
+%------------------------------------------------
+
+\runsubsection{Cloud App Platform}
+\descript{| R\&D Engineering}
+\location{Jun 2013 - Oct 2015 | New York, NY}
+
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Designed lambda-as-a-service pattern for data-platform strategy.
+\item Won trust with executive backers, started working group.
+\item Developed patent strategy with chief patent counsel.
+\item All of the above at leading Pharma and Financial Data corp.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+
+%------------------------------------------------
+
+\runsubsection{Bardcruft}
+\descript{| Situated Media programme}
+\location{2004, 2017 | Tempe; NYC}
+
+UX Design and systems for finding similarities in narratives (‘Hero of 100 Faces’)
+\begin{tightitemize}
+\item Use of ConceptNet, mysql (now RDF4J and SPARQL)
+\item Translation of stories into state trajectories and relationship triples
+\item Visualization of semantic graph by-concept (scopes/filters)
+\item Text annotation GUI for creating new triples.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+
+%------------------------------------------------
+
 
 \runsubsection{Convergance study of CFD + Experimental Data}
 \descript{| ASU}
@@ -297,11 +328,9 @@ Design and built a tool for finding similarities in narratives (‘Hero of 100 F
 \location{June 2006 - Oct 2009 | Tempe, AZ}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
-
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
-\item Algorithmic model development in python and CAD machining. 
-\item CFD modeling with ANSYS multiphysics. 
+\item Algorithmic model development in python and CAD machining.
+\item CFD modeling with ANSYS multiphysics.
 \item Quantified comparison k-$\epsilon$ turbulence, reynolds stress, and laminar simulations.
 \item Analysis of free-surface experimental model, and simulation data.
 \item Platform patent strategy.  Grants. Seed capital raised. Team of world authorities.
@@ -349,9 +378,9 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 
 \location{Sept 2005 – May 2006 | Tempe, AZ}
 \begin{tightitemize}
-\item Formulated notation conventions for data navigational affordances.
+\item Formulated UI/UX notation conventions for data navigational affordances.
 \item Aimed at creating consistent semantic meaning in 2D and 3D spaces through quantizing hypermedia datasets using mereological models.
-\item Research into cognitive continuum across haptic and perceptual domains.  
+\item Research into cognitive continuum across UX haptic and perceptual domains.
 \item Live test subject research, HCI methods.  Patentable, never filed.
 \end{tightitemize}
 
@@ -368,7 +397,7 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 \item Lab resources grant. Dry and wet lab methods. ICPMS media prep.
 \item Design of experiments for multivariate analyses.
 \item Developed patent outline / structure.
-\item Productionalization / reduce to practice.  
+\item Productionalization / reduce to practice. 
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
