--- a/resumes/cv_zcj_tech.tex
+++ b/resumes/cv_zcj_tech.tex
@@ -84,23 +84,20 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 
 \includegraphics[width=2.3in]{github-work}
 
-\section{}
 \sectionspace % Some whitespace after the section
 
-\section{}
-\sectionspace % Some whitespace after the section
+\includegraphics[width=2.3in]{stackoverflow-reps}
+
+Favorite editor: vim
+
+First computer: Mac IIci
 
 \section{}
-\sectionspace % Some whitespace after the section
+\section{}
+\section{}
 
 \section{}
-\sectionspace % Some whitespace after the section
-
 \section{}
-\sectionspace % Some whitespace after the section
-
-\section{}
-\sectionspace % Some whitespace after the section
 
 \section{}
 \sectionspace % Some whitespace after the section
